go-hello-app/02-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app-deployment
  namespace: hello-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-app
  template:
    metadata:
      labels:
        app: hello-app
    spec:
      containers:
      - name: hello-app
        # We'll build and push v1.0 manually one time to start
        image: ghcr.io/dusansvoboda/go-hello-app:v1.0 
        ports:
        - containerPort: 8080
