go-hello-app/03-service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-app-service
  namespace: hello-app
spec:
  selector:
    app: hello-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: NodePort
